--- a/Projects/VisualVk/VisualVk.vcxproj
+++ b/Projects/VisualVk/VisualVk.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="LogicalDevice.h" />
     <ClInclude Include="DeviceMemory.h" />
     <ClInclude Include="PhysicalDevice.h" />
+    <ClInclude Include="Resource.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
