--- a/Projects/VisualVk/VisualVk.vcxproj
+++ b/Projects/VisualVk/VisualVk.vcxproj
@@ -177,10 +177,12 @@
     <ClCompile Include="LogicalDevice.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PhysicalDevice.cpp" />
+    <ClCompile Include="Resource.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Buffer.h" />
     <ClInclude Include="CommandBuffer.h" />
+    <ClInclude Include="Debug.h" />
     <ClInclude Include="Instance.h" />
     <ClInclude Include="LogicalDevice.h" />
     <ClInclude Include="DeviceMemory.h" />
