--- a/Projects/VisualVk/VisualVk.vcxproj.filters
+++ b/Projects/VisualVk/VisualVk.vcxproj.filters
@@ -20,62 +20,71 @@
     <Filter Include="1. Resources">
       <UniqueIdentifier>{c26a652c-6aa1-40cc-a967-552bef9f4a57}</UniqueIdentifier>
     </Filter>
-    <Filter Include="1. Resources\Buffer">
-      <UniqueIdentifier>{cc6d9c4c-2bbc-43ee-9609-4e77e43c9595}</UniqueIdentifier>
-    </Filter>
     <Filter Include="1. Resources\0. Resource">
       <UniqueIdentifier>{4255f242-e26e-4d97-9d9a-d6a02c76deeb}</UniqueIdentifier>
     </Filter>
     <Filter Include="1. Resources\1. Memory">
       <UniqueIdentifier>{f8e3d7f4-da3f-4582-a3ce-5c1147ec9418}</UniqueIdentifier>
     </Filter>
+    <Filter Include="1. Resources\2. Signals">
+      <UniqueIdentifier>{7765e599-96ba-4222-8f99-c7fafa597028}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="1. Resources\3. Buffer">
+      <UniqueIdentifier>{cc6d9c4c-2bbc-43ee-9609-4e77e43c9595}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Instance.cpp">
       <Filter>0. Context\0. Instance</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="PhysicalDevice.cpp">
-      <Filter>0. Context\2. PhysicalDevice</Filter>
-    </ClCompile>
     <ClCompile Include="LogicalDevice.cpp">
       <Filter>0. Context\1. LogicalDevice</Filter>
+    </ClCompile>
+    <ClCompile Include="PhysicalDevice.cpp">
+      <Filter>0. Context\2. PhysicalDevice</Filter>
     </ClCompile>
     <ClCompile Include="CommandBuffer.cpp">
       <Filter>0. Context\3. CommandBuffer</Filter>
     </ClCompile>
-    <ClCompile Include="DeviceMemory.cpp">
-      <Filter>1. Resources\1. Memory</Filter>
-    </ClCompile>
-    <ClCompile Include="Buffer.cpp">
-      <Filter>1. Resources\Buffer</Filter>
-    </ClCompile>
     <ClCompile Include="Resource.cpp">
       <Filter>1. Resources\0. Resource</Filter>
     </ClCompile>
+    <ClCompile Include="DeviceMemory.cpp">
+      <Filter>1. Resources\1. Memory</Filter>
+    </ClCompile>
+    <ClCompile Include="Signals.cpp">
+      <Filter>1. Resources\2. Signals</Filter>
+    </ClCompile>
+    <ClCompile Include="Buffer.cpp">
+      <Filter>1. Resources\3. Buffer</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Instance.h">
       <Filter>0. Context\0. Instance</Filter>
     </ClInclude>
-    <ClInclude Include="PhysicalDevice.h">
-      <Filter>0. Context\2. PhysicalDevice</Filter>
-    </ClInclude>
     <ClInclude Include="LogicalDevice.h">
       <Filter>0. Context\1. LogicalDevice</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicalDevice.h">
+      <Filter>0. Context\2. PhysicalDevice</Filter>
     </ClInclude>
     <ClInclude Include="CommandBuffer.h">
       <Filter>0. Context\3. CommandBuffer</Filter>
     </ClInclude>
-    <ClInclude Include="DeviceMemory.h">
-      <Filter>1. Resources\1. Memory</Filter>
-    </ClInclude>
-    <ClInclude Include="Buffer.h">
-      <Filter>1. Resources\Buffer</Filter>
-    </ClInclude>
-    <ClInclude Include="Debug.h" />
     <ClInclude Include="Resource.h">
       <Filter>1. Resources\0. Resource</Filter>
     </ClInclude>
+    <ClInclude Include="DeviceMemory.h">
+      <Filter>1. Resources\1. Memory</Filter>
+    </ClInclude>
+    <ClInclude Include="Signals.h">
+      <Filter>1. Resources\2. Signals</Filter>
+    </ClInclude>
+    <ClInclude Include="Buffer.h">
+      <Filter>1. Resources\3. Buffer</Filter>
+    </ClInclude>
+    <ClInclude Include="Common.h" />
   </ItemGroup>
 </Project>
