--- a/Projects/VisualVk/VisualVk.vcxproj
+++ b/Projects/VisualVk/VisualVk.vcxproj
@@ -159,6 +159,7 @@
   <ItemGroup>
     <ClCompile Include="Buffer.cpp" />
     <ClCompile Include="CommandBuffer.cpp" />
+    <ClCompile Include="Descriptor.cpp" />
     <ClCompile Include="DeviceMemory.cpp" />
     <ClCompile Include="Images.cpp" />
     <ClCompile Include="Instance.cpp" />
@@ -175,6 +176,7 @@
   <ItemGroup>
     <ClInclude Include="Buffer.h" />
     <ClInclude Include="CommandBuffer.h" />
+    <ClInclude Include="Descriptor.h" />
     <ClInclude Include="DeviceMemory.h" />
     <ClInclude Include="Images.h" />
     <ClInclude Include="Instance.h" />
