--- a/Projects/VisualVk/VisualVk.vcxproj.filters
+++ b/Projects/VisualVk/VisualVk.vcxproj.filters
@@ -38,17 +38,20 @@
     <Filter Include="1. Resources\5. Textures">
       <UniqueIdentifier>{f72bbd1a-504e-4921-b73c-3371e11decd6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="1. Resources\7. Swapchain">
-      <UniqueIdentifier>{771f30a1-02c3-4ce9-a5ce-bfe03c097cc6}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="1. Resources\8. Framebuffer">
-      <UniqueIdentifier>{56b8a199-e8d0-40d9-bfe6-b5e03fe6eebf}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="1. Resources\9. ShaderModule">
-      <UniqueIdentifier>{f1a0f1a5-6074-41b6-887a-c26f951d031f}</UniqueIdentifier>
-    </Filter>
     <Filter Include="1. Resources\6. Pipeline">
       <UniqueIdentifier>{8d3995e1-9f12-4672-bec1-9bbdc302e458}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="1. Resources\10. ShaderModule">
+      <UniqueIdentifier>{f1a0f1a5-6074-41b6-887a-c26f951d031f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="1. Resources\8. Swapchain">
+      <UniqueIdentifier>{771f30a1-02c3-4ce9-a5ce-bfe03c097cc6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="1. Resources\9. Framebuffer">
+      <UniqueIdentifier>{56b8a199-e8d0-40d9-bfe6-b5e03fe6eebf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="1. Resources\7. Descriptor">
+      <UniqueIdentifier>{9905aed2-c2ce-4997-a80c-538ce9149818}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -77,7 +80,7 @@
       <Filter>1. Resources\3. Buffer</Filter>
     </ClCompile>
     <ClCompile Include="Swapchain.cpp">
-      <Filter>1. Resources\7. Swapchain</Filter>
+      <Filter>1. Resources\8. Swapchain</Filter>
     </ClCompile>
     <ClCompile Include="Images.cpp">
       <Filter>1. Resources\4. Images</Filter>
@@ -86,13 +89,16 @@
       <Filter>1. Resources\5. Textures</Filter>
     </ClCompile>
     <ClCompile Include="ShaderModule.cpp">
-      <Filter>1. Resources\9. ShaderModule</Filter>
+      <Filter>1. Resources\10. ShaderModule</Filter>
     </ClCompile>
     <ClCompile Include="Framebuffer.cpp">
-      <Filter>1. Resources\8. Framebuffer</Filter>
+      <Filter>1. Resources\9. Framebuffer</Filter>
     </ClCompile>
     <ClCompile Include="Pipelines.cpp">
       <Filter>1. Resources\6. Pipeline</Filter>
+    </ClCompile>
+    <ClCompile Include="Descriptor.cpp">
+      <Filter>1. Resources\7. Descriptor</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -105,9 +111,6 @@
     <ClInclude Include="PhysicalDevice.h">
       <Filter>0. Context\2. PhysicalDevice</Filter>
     </ClInclude>
-    <ClInclude Include="CommandBuffer.h">
-      <Filter>0. Context\3. CommandBuffer</Filter>
-    </ClInclude>
     <ClInclude Include="Resource.h">
       <Filter>1. Resources\0. Resource</Filter>
     </ClInclude>
@@ -118,7 +121,7 @@
       <Filter>1. Resources\3. Buffer</Filter>
     </ClInclude>
     <ClInclude Include="Swapchain.h">
-      <Filter>1. Resources\7. Swapchain</Filter>
+      <Filter>1. Resources\8. Swapchain</Filter>
     </ClInclude>
     <ClInclude Include="Images.h">
       <Filter>1. Resources\4. Images</Filter>
@@ -127,16 +130,22 @@
       <Filter>1. Resources\5. Textures</Filter>
     </ClInclude>
     <ClInclude Include="ShaderModule.h">
-      <Filter>1. Resources\9. ShaderModule</Filter>
+      <Filter>1. Resources\10. ShaderModule</Filter>
     </ClInclude>
     <ClInclude Include="Framebuffer.h">
-      <Filter>1. Resources\8. Framebuffer</Filter>
+      <Filter>1. Resources\9. Framebuffer</Filter>
     </ClInclude>
     <ClInclude Include="DeviceMemory.h">
       <Filter>1. Resources\1. Memory</Filter>
     </ClInclude>
     <ClInclude Include="Pipelines.h">
       <Filter>1. Resources\6. Pipeline</Filter>
+    </ClInclude>
+    <ClInclude Include="CommandBuffer.h">
+      <Filter>0. Context\3. CommandBuffer</Filter>
+    </ClInclude>
+    <ClInclude Include="Descriptor.h">
+      <Filter>1. Resources\7. Descriptor</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
