--- a/Projects/VisualVk/VisualVk.vcxproj
+++ b/Projects/VisualVk/VisualVk.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="Pipelines.cpp" />
     <ClCompile Include="Resource.cpp" />
     <ClCompile Include="ShaderModule.cpp" />
+    <ClCompile Include="ShaderStage.cpp" />
     <ClCompile Include="Signals.cpp" />
     <ClCompile Include="Swapchain.cpp" />
     <ClCompile Include="Textures.cpp" />
@@ -186,6 +187,7 @@
     <ClInclude Include="Pipelines.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="ShaderModule.h" />
+    <ClInclude Include="ShaderStage.h" />
     <ClInclude Include="Signals.h" />
     <ClInclude Include="Swapchain.h" />
     <ClInclude Include="Textures.h" />
