--- a/Projects/VisualVk/VisualVk.vcxproj.filters
+++ b/Projects/VisualVk/VisualVk.vcxproj.filters
@@ -106,6 +106,9 @@
     <ClCompile Include="Buffers.cpp">
       <Filter>1. Resources\3. Buffers</Filter>
     </ClCompile>
+    <ClCompile Include="DescriptorSet.cpp">
+      <Filter>1. Resources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Instance.h">
@@ -155,6 +158,9 @@
     </ClInclude>
     <ClInclude Include="Buffers.h">
       <Filter>1. Resources\3. Buffers</Filter>
+    </ClInclude>
+    <ClInclude Include="DescriptorSet.h">
+      <Filter>1. Resources</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
