--- a/Projects/VisualVk/VisualVk.vcxproj.filters
+++ b/Projects/VisualVk/VisualVk.vcxproj.filters
@@ -147,5 +147,8 @@
     <ClInclude Include="Resource.h">
       <Filter>1. Resources\0. Resource</Filter>
     </ClInclude>
+    <ClInclude Include="Flags.h">
+      <Filter>0. Context</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
